# qcluster

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: coveralls.yml  flake8.yml  pytest.yml
docs/: Evaluation Results.md  Objective.md  TODO.md
evaluation_results/20250614-185727-111cf19/: cluster_to_class_scores.csv  clusters.json  final_report.md  main_script_pipeline.py  results.html  stats.csv  stats.pycm  stats_matrix.csv
evaluation_results/20250615-175908-2b70106/: .env  stats.pycm  stats_matrix.csv
evaluation_results/20250616-103219-c1852d7/: cluster_to_class_scores.csv  clusters.json  final_report.md  main_script_pipeline.py  results.html  stats.csv  stats.pycm
notebooks/: pipeline.ipynb
qcluster/: __init__.py  clustering.py  consts.py  custom_types.py  datamodels.py  dataset_analyzer.py  describer.py  dissimilarity.py  evaluation.py  feature_extractors.py  features.py  git_utils.py  git_utls.py  models.py  pipeline.py  preload.py  sample_analyzer.py  similarity.py  types.py  utils.py
qcluster/algorithms/: clustering.py  describer.py  dissimilarity.py  feature_extractors.py  similarity.py  zoo.py
qcluster/classes/: intents.txt
qcluster/datamodels/: evaluation_result.py  filesystem.py  instruction.py  output.py  sample.py
qcluster/llm/: describer.py  ollama.py  reporter.py
qcluster/templates/: description_prompt.j2  description_prompt_from_instructions.j2  description_prompt_simple.j2  generate_report_prompt.j2  templates.py
tests/: test_datamodels.py
tests/test_qcluster/: test_dataset_analyzer.py  test_evaluation.py
tests/test_qcluster/test_algorithms/: test_clustering.py  test_dissimilarity.py  test_feature_extractors.py  test_similarity.py
tests/test_qcluster/test_datamodels/: test_evaluation_result.py  test_filesystem.py  test_instruction.py  test_output.py  test_sample.py
tests/test_qcluster/test_llm/: test_describer.py  test_ollama.py  test_reporter.py
