[project]
name = "qcluster"
authors = [
    { name = "Davit Budaghyan", email = "david@budaghyan.com" }
]
version = "0.1.8"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.0",
    "hdbscan>=0.8.40",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "pandas-stubs==2.2.3.250527",
    "pycm>=4.3",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
